# Home_Work_WEB_8

./: pyproject.toml
Part_1/: models.py  quotes.json  search.py
Part_2/: consumer_email.py  consumer_sms.py  producer.py
